# rustigram

./: .gitignore  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  release.yml
crates/rustigram/: Cargo.toml
crates/rustigram-api/: Cargo.toml
crates/rustigram-api/src/: client.rs  error.rs  lib.rs
crates/rustigram-api/src/methods/: bot_settings.rs  business.rs  chat_management.rs  editing.rs  forum.rs  games.rs  getters.rs  gifts.rs  inline.rs  miniapp.rs  mod.rs  passport.rs  payments.rs  reactions.rs  sending.rs  stickers.rs  stories.rs  updates.rs  verification.rs
crates/rustigram-api/tests/: client_tests.rs  types_tests.rs
crates/rustigram-bot/: Cargo.toml
crates/rustigram-bot/src/: bot.rs  context.rs  dispatcher.rs  error.rs  filter.rs  handler.rs  lib.rs  state.rs
crates/rustigram-bot/src/update_listener/: mod.rs  polling.rs  webhook.rs
crates/rustigram-bot/tests/: dispatcher_tests.rs
crates/rustigram-macros/: Cargo.toml
crates/rustigram-macros/src/: lib.rs
crates/rustigram-types/: Cargo.toml
crates/rustigram-types/src/: chat.rs  chat_member.rs  checklist.rs  direct_messages.rs  file.rs  forum.rs  games.rs  gifts.rs  inline.rs  keyboard.rs  lib.rs  managed_bot.rs  message.rs  passport.rs  payments.rs  poll.rs  reaction.rs  sticker.rs  story.rs  suggested_post.rs  update.rs  user.rs  webhook.rs
crates/rustigram/examples/: echo_bot.rs  inline_keyboard.rs  state_machine.rs  webhook_bot.rs
crates/rustigram/src/: lib.rs
crates/rustigram/tests/: version_numbers.rs
