[package]
name        = "rustigram-macros"
description = "Procedural macros for rustigram"
keywords    = ["telegram", "bot", "macros", "derive"]
categories  = ["api-bindings"]
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }